[gd_scene load_steps=4 format=3 uid="uid://cmgebnmi52uur"]

[ext_resource type="Theme" uid="uid://mbsg4xqnedxi" path="res://theme/FlatUI4/kenneyUI-red.tres" id="1_na7bm"]
[ext_resource type="Script" path="res://system_menu/option_audio.gd" id="2_im63w"]
[ext_resource type="Theme" uid="uid://cjrfgel6g1bec" path="res://theme/theme_label_title.tres" id="3_e4nuk"]

[node name="option_audio" type="Control"]
custom_minimum_size = Vector2(500, 300)
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -200.0
offset_right = 250.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_na7bm")
script = ExtResource("2_im63w")
focus_on = NodePath("PanelContainer/VBoxContainer/VBoxContainer/HSlider_music_volume")

[node name="PanelContainer" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(500, 270)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -135.0
offset_right = 250.0
offset_bottom = 135.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("3_e4nuk")
text = "Audio Options
"
horizontal_alignment = 1

[node name="btn_close" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
text = "Close"

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="lbl_music_volume" type="Label" parent="PanelContainer/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Music Volume : "

[node name="HSlider_music_volume" type="HSlider" parent="PanelContainer/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
min_value = -20.0
max_value = 20.0

[node name="lbl_interface_volume" type="Label" parent="PanelContainer/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Music Volume : "

[node name="HSlider_interface_volume" type="HSlider" parent="PanelContainer/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
min_value = -20.0
max_value = 20.0

[node name="lbl_player_volume" type="Label" parent="PanelContainer/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Music Volume : "

[node name="HSlider_player_volume" type="HSlider" parent="PanelContainer/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
min_value = -20.0
max_value = 20.0

[node name="lbl_ambient_volume" type="Label" parent="PanelContainer/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Music Volume : "

[node name="HSlider_ambient_volume" type="HSlider" parent="PanelContainer/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
min_value = -20.0
max_value = 20.0

[connection signal="button_down" from="PanelContainer/VBoxContainer/HBoxContainer/btn_close" to="." method="_on_btn_close_button_down"]
[connection signal="drag_ended" from="PanelContainer/VBoxContainer/VBoxContainer/HSlider_music_volume" to="." method="_on_h_slider_music_volume_drag_ended"]
[connection signal="value_changed" from="PanelContainer/VBoxContainer/VBoxContainer/HSlider_music_volume" to="." method="_on_h_slider_music_volume_value_changed"]
[connection signal="drag_ended" from="PanelContainer/VBoxContainer/VBoxContainer/HSlider_interface_volume" to="." method="_on_h_slider_interface_volume_drag_ended"]
[connection signal="value_changed" from="PanelContainer/VBoxContainer/VBoxContainer/HSlider_interface_volume" to="." method="_on_h_slider_interface_volume_value_changed"]
[connection signal="drag_ended" from="PanelContainer/VBoxContainer/VBoxContainer/HSlider_player_volume" to="." method="_on_h_slider_player_volume_drag_ended"]
[connection signal="value_changed" from="PanelContainer/VBoxContainer/VBoxContainer/HSlider_player_volume" to="." method="_on_h_slider_player_volume_value_changed"]
[connection signal="drag_ended" from="PanelContainer/VBoxContainer/VBoxContainer/HSlider_ambient_volume" to="." method="_on_h_slider_ambient_volume_drag_ended"]
[connection signal="value_changed" from="PanelContainer/VBoxContainer/VBoxContainer/HSlider_ambient_volume" to="." method="_on_h_slider_ambient_volume_value_changed"]
